feat: validation requests params
