# docs/swagger.json
@@ -110,7 +110,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.Accounts"
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.AccountRequest"
                         }
                     }
                 ],
@@ -331,7 +331,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.Categories"
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.CategoryRequest"
                         }
                     }
                 ],
@@ -561,7 +561,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.Costs"
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.CostRequest"
                         }
                     }
                 ],
@@ -864,7 +864,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.Investments"
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.InvestmentRequest"
                         }
                     }
                 ],
@@ -1171,7 +1171,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.Revenues"
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.RevenueRequest"
                         }
                     }
                 ],
@@ -1308,6 +1308,25 @@
         }
     },
     "definitions": {
+        "github_com_vkunssec_contabius_pkg_domain.AccountRequest": {
+            "type": "object",
+            "required": [
+                "account",
+                "color"
+            ],
+            "properties": {
+                "account": {
+                    "description": "Nome da conta",
+                    "type": "string",
+                    "example": "Conta Corrente"
+                },
+                "color": {
+                    "description": "Cor da conta",
+                    "type": "string",
+                    "example": "#000000"
+                }
+            }
+        },
         "github_com_vkunssec_contabius_pkg_domain.Accounts": {
             "type": "object",
             "properties": {
@@ -1365,6 +1384,68 @@
                     "description": "Data de atualização",
                     "type": "string",
                     "example": "2025-01-01T00:00:00Z"
+                }
+            }
+        },
+        "github_com_vkunssec_contabius_pkg_domain.CategoryRequest": {
+            "type": "object",
+            "required": [
+                "category"
+            ],
+            "properties": {
+                "category": {
+                    "description": "Nome da categoria",
+                    "type": "string",
+                    "example": "Alimentação"
+                },
+                "parent": {
+                    "description": "ID do pai da categoria",
+                    "type": "string",
+                    "example": "678079f6f5080a39a8eedc1e"
+                }
+            }
+        },
+        "github_com_vkunssec_contabius_pkg_domain.CostRequest": {
+            "type": "object",
+            "required": [
+                "amount",
+                "category",
+                "cost"
+            ],
+            "properties": {
+                "amount": {
+                    "description": "Valor do custo",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.Money"
+                        }
+                    ]
+                },
+                "category": {
+                    "description": "ID da categoria",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.PartialCategoryRequest"
+                        }
+                    ]
+                },
+                "cost": {
+                    "description": "Descrição do custo",
+                    "type": "string",
+                    "example": "aluguel"
+                },
+                "installments": {
+                    "description": "Número de parcelas",
+                    "type": "integer",
+                    "example": 12
+                },
+                "methods": {
+                    "description": "Método de pagamento",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.Methods"
+                        }
+                    ]
                 }
             }
         },
@@ -1525,6 +1606,57 @@
                 "InvestmentTypeCOE",
                 "InvestmentTypeOther"
             ]
+        },
+        "github_com_vkunssec_contabius_pkg_domain.InvestmentRequest": {
+            "type": "object",
+            "required": [
+                "account",
+                "amount",
+                "investment_type"
+            ],
+            "properties": {
+                "account": {
+                    "description": "Conta do usuário",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.PartialAccountRequest"
+                        }
+                    ]
+                },
+                "amount": {
+                    "description": "Valor do investimento",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.Money"
+                        }
+                    ]
+                },
+                "description": {
+                    "description": "Descrição do investimento",
+                    "type": "string",
+                    "example": "Investimento em CDB"
+                },
+                "investment_type": {
+                    "description": "Tipo de investimento",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.InvestmentType"
+                        }
+                    ]
+                },
+                "recurrence": {
+                    "description": "Recurrence do investimento",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.Recurrence"
+                        }
+                    ]
+                },
+                "recurrence_day": {
+                    "description": "Dia da recorrência",
+                    "type": "integer"
+                }
+            }
         },
         "github_com_vkunssec_contabius_pkg_domain.InvestmentType": {
             "type": "object",
@@ -1687,6 +1819,50 @@
                 }
             }
         },
+        "github_com_vkunssec_contabius_pkg_domain.PartialAccountRequest": {
+            "type": "object",
+            "required": [
+                "account",
+                "color",
+                "id"
+            ],
+            "properties": {
+                "account": {
+                    "description": "Nome da conta",
+                    "type": "string",
+                    "example": "Conta Corrente"
+                },
+                "color": {
+                    "description": "Cor da conta",
+                    "type": "string",
+                    "example": "#000000"
+                },
+                "id": {
+                    "description": "ID da conta",
+                    "type": "string",
+                    "example": "678079f6f5080a39a8eedc1e"
+                }
+            }
+        },
+        "github_com_vkunssec_contabius_pkg_domain.PartialCategoryRequest": {
+            "type": "object",
+            "required": [
+                "category",
+                "id"
+            ],
+            "properties": {
+                "category": {
+                    "description": "Nome da categoria",
+                    "type": "string",
+                    "example": "Alimentação"
+                },
+                "id": {
+                    "description": "ID da categoria",
+                    "type": "string",
+                    "example": "678079f6f5080a39a8eedc1e"
+                }
+            }
+        },
         "github_com_vkunssec_contabius_pkg_domain.Recurrence": {
             "type": "string",
             "enum": [
@@ -1704,6 +1880,36 @@
                 "RecurrenceYearly",
                 "RecurrenceSporadic"
             ]
+        },
+        "github_com_vkunssec_contabius_pkg_domain.RevenueRequest": {
+            "type": "object",
+            "required": [
+                "amount",
+                "revenue"
+            ],
+            "properties": {
+                "amount": {
+                    "description": "Valor da receita",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.Money"
+                        }
+                    ]
+                },
+                "method": {
+                    "description": "Método de pagamento",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/github_com_vkunssec_contabius_pkg_domain.Methods"
+                        }
+                    ]
+                },
+                "revenue": {
+                    "description": "Receita",
+                    "type": "string",
+                    "example": "salário"
+                }
+            }
         },
         "github_com_vkunssec_contabius_pkg_domain.Revenues": {
             "type": "object",
