# pkg/handlers/costs/create.go
@@ -17,12 +17,12 @@ import (
 // @Produce json
 // @Security ApiKeyAuth
 // @Param Authorization header string true "Token Bearer"
-// @Param request body domain.Costs true "Dados do custo"
+// @Param request body domain.CostRequest true "Dados do custo"
 // @Success 200 {object} common.Response
 // @Failure 400 {object} common.BadRequest
 // @Router /costs [post]
 func CreateCosts(ctx *fiber.Ctx) error {
-	cost := new(domain.Costs)
+	cost := new(domain.CostRequest)
 	if err := ctx.BodyParser(cost); err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(common.BadRequest{
 			Message: err.Error(),
